--- a/frontend/src/Css/Reports.css
+++ b/frontend/src/Css/Reports.css
@@ -1,7 +1,7 @@
 /* AllReports.css */
 
 .all-reports {
-    max-width: 1200px;
+    max-width: 1050px;
     margin: 120px auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -20,7 +20,7 @@
   .reports-gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    /* justify-content: center; */
     /* align-items: center; */
     /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
     gap: 15px;
